--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'poppins',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+nav{
+  height:70px;
+  display: flex;
+  background-color:white;
+  padding:20px 36px;
+  box-shadow:0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+
+}
+
+section{
+  padding: 20px;
+
+}
+.hero{
+  display:flex;
+  flex-direction: column;
 }
