--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ nav{
   box-shadow:0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 
 }
+.bold{
+  font-weight:bold;
+}
+.gray{
+  color:gray;
+}
 
 section{
   padding: 20px;
@@ -25,4 +31,27 @@ section{
 .hero{
   display:flex;
   flex-direction: column;
+}
+.hero-photo{
+  max-width:400;
+  align-self:center;
+}
+.hero--header{
+  margin-bottom:16px;
+}
+.hero--text{
+  margin-top:0;
+}
+.card{
+  width: 175px;
+  font-size:12px;
+
+}
+.card--image{
+  width:100%;
+  border-radius:9px;
+}
+.card--stats{
+  display:flex;
+  align-items:center;
 }
