--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,13 @@ nav{
   height:70px;
   display: flex;
   background-color:white;
-  padding:20px 36px;
+  padding:10px 36px;
   box-shadow:0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 
+}
+.nav--logo{
+  width:180px;
+  height:60px;
 }
 .bold{
   font-weight:bold;
@@ -45,6 +49,7 @@ section{
 .card{
   width: 175px;
   font-size:12px;
+  margin:10px;
 
 }
 .card--image{
@@ -54,4 +59,7 @@ section{
 .card--stats{
   display:flex;
   align-items:center;
+}
+.cards{
+  display: flex;
 }
