--- a/src/index.css
+++ b/src/index.css
@@ -50,16 +50,35 @@ section{
   width: 175px;
   font-size:12px;
   margin:10px;
-
+  flex: 0 0 auto;
+  display:flex;
+  flex-direction:column;
 }
 .card--image{
-  width:100%;
-  border-radius:9px;
+  max-width:100%;
+  height: 250px; /* Set a fixed height for uniformity */
+  border-radius: 9px;
+  object-fit: cover;
+  margin-bottom: 9px;
+  
 }
 .card--stats{
   display:flex;
   align-items:center;
 }
-.cards{
+.cards--list{
   display: flex;
+  flex-direction:row;
+}
+.card--title{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card--stats{
+  display:flex;
+  align-items: center;
+
+}
+.card--star{
+  height:14px;
 }
