--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ section{
   flex: 0 0 auto;
   display:flex;
   flex-direction:column;
+  position: relative;
 }
 .card--image{
   max-width:100%;
@@ -81,4 +82,13 @@ section{
 }
 .card--star{
   height:14px;
+}
+.card--badge{
+  position: absolute;
+  top:6px;
+  left:6px;
+  background-color:white;
+  padding:5px 7px;
+  border-radius:2px;
+  font-weight:bold;
 }
